lime/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path:  /
          pathType: Prefix
          backend:
            service:
              name: neo-service
              port:
                number: 8081
